feat: footer added to JavaScript classes

--- a/index.html
+++ b/index.html
@@ -360,7 +360,9 @@
                 >
               </li>
               <li>
-                <a href="/js/funcao/retorno_da_funcao/index.html">Aula 19: Retorno de uma função.</a>
+                <a href="/js/funcao/retorno_da_funcao/index.html"
+                  >Aula 19: Retorno de uma função.</a
+                >
               </li>
               <li>
                 <a href="/js/escopo/index.html">Aula 20: Escopo.</a>
@@ -441,7 +443,9 @@
                 >
               </li>
               <li>
-                <a href="/js/exercicios/exercicio-14/index.html">Exercício 14: Calculadora Geométrica.</a>
+                <a href="/js/exercicios/exercicio-14/index.html"
+                  >Exercício 14: Calculadora Geométrica.</a
+                >
               </li>
               <li>
                 <a href="/js/exercicios/exercicio-">Exercício 15: .</a>
@@ -453,13 +457,13 @@
     </main>
 
     <footer>
-      <p>© 2024 Por Guilherme Reis.</p>
+      <p>© 2024 Desenvolvido por Guilherme Reis.</p>
       <p>
-        Siga-me no<a
+        Acesse o meu<a
           class="link_git"
           href="https://github.com/Guilherme-210"
           target="_blank"
-          ><ion-icon name="logo-github"></ion-icon> GitHub</a
+          ><strong><ion-icon name="logo-github"></ion-icon> GitHub</strong></a
         >
       </p>
     </footer>
