--- a/js/Usando_js_no_html/index.html
+++ b/js/Usando_js_no_html/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
     <link rel="stylesheet" href="style.css" />
     <title>Usando JavaScript no HTML</title>
     <script>
@@ -30,7 +36,9 @@
     <div class="section">
       <h2>Utilizando a Tag <code>&lt;script&gt;</code></h2>
       <p>
-        A tag <code>&lt;script&gt;</code> permite adicionar código JavaScript diretamente no arquivo HTML. No entanto, isso pode deixar o arquivo muito grande e desorganizado.
+        A tag <code>&lt;script&gt;</code> permite adicionar código JavaScript
+        diretamente no arquivo HTML. No entanto, isso pode deixar o arquivo
+        muito grande e desorganizado.
       </p>
     </div>
 
@@ -38,7 +46,10 @@
       <h2>Criando Arquivos JavaScript Separados</h2>
       <ul>
         <li>É a melhor forma de organizar o código JavaScript.</li>
-        <li>Criar arquivos com extensão <code>.js</code> e referenciá-los no HTML usando a tag <code>&lt;script src="caminho_do_arquivo.js"&gt;</code>.</li>
+        <li>
+          Criar arquivos com extensão <code>.js</code> e referenciá-los no HTML
+          usando a tag <code>&lt;script src="caminho_do_arquivo.js"&gt;</code>.
+        </li>
       </ul>
     </div>
 
@@ -54,16 +65,31 @@
     <div class="section">
       <h2>Múltiplos Arquivos</h2>
       <p>
-        É possível incluir vários arquivos <code>.js</code> no HTML, e a ordem em que eles são carregados é importante para o funcionamento correto.
+        É possível incluir vários arquivos <code>.js</code> no HTML, e a ordem
+        em que eles são carregados é importante para o funcionamento correto.
       </p>
     </div>
 
     <div class="section">
       <h2>Posição da Tag <code>&lt;script&gt;</code> no HTML</h2>
       <p>
-        A tag <code>&lt;script&gt;</code> pode estar em qualquer lugar no HTML, mas é comum colocá-la no final para garantir que todos os elementos HTML sejam carregados antes do JavaScript.
+        A tag <code>&lt;script&gt;</code> pode estar em qualquer lugar no HTML,
+        mas é comum colocá-la no final para garantir que todos os elementos HTML
+        sejam carregados antes do JavaScript.
       </p>
     </div>
+
+    <footer class="footer">
+      <p class="footer">© 2024 Desenvolvido por Guilherme Reis.</p>
+      <p class="footer">
+        Acesse o meu<a
+          class="link_git"
+          href="https://github.com/Guilherme-210"
+          target="_blank"
+          ><strong><ion-icon name="logo-github"></ion-icon> GitHub</strong></a
+        >
+      </p>
+    </footer>
 
     <script>
       console.log("Tudo bem?")
