--- a/js/estruturas-de-dados/objetos/index.html
+++ b/js/estruturas-de-dados/objetos/index.html
@@ -1,32 +1,47 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
     <link rel="stylesheet" href="../style.css" />
     <title>Objetos no JavaScript</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <nav>
-            <a class="nav_pages" href="/js/estruturas-de-dados/array_bidimensionais-matrizes/index.html">Arrays Bidimensionais (Matrizes)</a>
-            <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
-            <a class="nav_pages" href="/js/exercicios/exercicio-13/index.html">Exercício 13: Cadastro de imóveis</a>
-        </nav>
-        <h1>Objetos no JavaScript</h1>
+      <nav>
+        <a
+          class="nav_pages"
+          href="/js/estruturas-de-dados/array_bidimensionais-matrizes/index.html"
+          >Arrays Bidimensionais (Matrizes)</a
+        >
+        <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
+        <a class="nav_pages" href="/js/exercicios/exercicio-13/index.html"
+          >Exercício 13: Cadastro de imóveis</a
+        >
+      </nav>
+      <h1>Objetos no JavaScript</h1>
     </header>
 
     <div class="section">
-        <h2>Descrição</h2>
-        <p>Este exercício apresenta como trabalhar com objetos no JavaScript, permitindo armazenar dados em pares chave-valor.</p>
+      <h2>Descrição</h2>
+      <p>
+        Este exercício apresenta como trabalhar com objetos no JavaScript,
+        permitindo armazenar dados em pares chave-valor.
+      </p>
     </div>
 
     <div class="section">
-        <h2>Exemplo de Código JavaScript</h2>
-        <div class="code">
-            <pre>
+      <h2>Exemplo de Código JavaScript</h2>
+      <div class="code">
+        <pre>
 let pessoa = {
     nome: "João",
     idade: 25,
@@ -46,21 +61,44 @@ console.log(pessoa.endereço.rua); // Saída: Av. Brasil
 
 // Chamando o método
 console.log(pessoa.apresentar()); // Saída: Meu nome é João e tenho 25 anos.
-            </pre>
-        </div>
+            </pre
+        >
+      </div>
     </div>
 
     <div class="section">
-        <h2>Explicação</h2>
-        <p>O programa demonstra como criar e manipular um objeto no JavaScript:</p>
-        <ul>
-            <li>Um objeto é definido usando chaves <code>{}</code>, contendo pares chave-valor.</li>
-            <li>Propriedades são acessadas usando o operador ponto ou colchetes.</li>
-            <li>Métodos podem ser definidos como funções dentro de um objeto.</li>
-            <li>Objetos permitem a criação de estruturas de dados complexas e flexíveis.</li>
-        </ul>
+      <h2>Explicação</h2>
+      <p>
+        O programa demonstra como criar e manipular um objeto no JavaScript:
+      </p>
+      <ul>
+        <li>
+          Um objeto é definido usando chaves <code>{}</code>, contendo pares
+          chave-valor.
+        </li>
+        <li>
+          Propriedades são acessadas usando o operador ponto ou colchetes.
+        </li>
+        <li>Métodos podem ser definidos como funções dentro de um objeto.</li>
+        <li>
+          Objetos permitem a criação de estruturas de dados complexas e
+          flexíveis.
+        </li>
+      </ul>
     </div>
 
+    <footer class="footer">
+      <p class="footer">© 2024 Desenvolvido por Guilherme Reis.</p>
+      <p class="footer">
+        Acesse o meu<a
+          class="link_git"
+          href="https://github.com/Guilherme-210"
+          target="_blank"
+          ><strong><ion-icon name="logo-github"></ion-icon> GitHub</strong></a
+        >
+      </p>
+    </footer>
+
     <script src="./script.js"></script>
-</body>
+  </body>
 </html>
