--- a/js/exercicios/exercicio-4/index.html
+++ b/js/exercicios/exercicio-4/index.html
@@ -3,17 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
     <link rel="stylesheet" href="style.css" />
     <title>Cálculo de Dano</title>
   </head>
   <body>
     <header>
       <nav>
-        <a
-          class="nav_pages"
-          href="/js/exercicios/exercicio-3/index.html"
+        <a class="nav_pages" href="/js/exercicios/exercicio-3/index.html"
           >Exercício 3: Teste de velocidade</a
         >
         <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
@@ -92,6 +96,78 @@
         restantes.");
       </div>
     </div>
+
+    <div class="section">
+      <h2>Resolução</h2>
+      <div class="code">
+        <pre>
+// Declaração de variáveis
+let vida1, ataque1;
+let vida2, defesa2, escudo2;
+let vida_atual, dano;
+
+// Entrada de dados
+ataque1 = parseFloat(prompt('Qual e o seu nivel de ataque? '))
+
+vida2 = parseFloat(prompt('Qual e o nivel de vida dele? '))
+defesa2 = parseFloat(prompt('Qual e o seu nivel de defesa? '))
+escudo2 = prompt('Ele possui algum tipo de escudo? responda(yes/no)')
+
+// Verificação de escudo
+if (escudo2 === 'yes'){
+  // Cálculo de dano
+  dano = ataque1 - dano
+  dano /= 2 // Reduz pela metade se houver escudo
+
+  alert('Que pena! Seu dano acabou de cair pela metade!')
+
+  if (ataque1 > defesa2){
+    dano = ataque1 - defesa2
+    vida_atual = vida2 - dano
+    
+    alert(`O seu adiversario perdeu ${dano} e ficou com ${vida_atual} de vida.`)
+  } else if (ataque1 == defesa2) {
+    alert('O seu adiversario se esquivou do seu golpe.')
+  } else if (ataque1 < defesa2) {
+    Boolean(dano = ataque1 / 2)
+    vida1 = vida1 - dano
+
+    alert('O seu adiversario usou um contra golpe e vc acabou de perder o equivalente a metade do seu dano')
+    alert(`Você perdeu ${dano} de vida, a sua vida atual e ${vida1}`)
+  }
+} else {
+  alert('Que chato! O seu dano continuou normal.')
+  // Cálculo de dano
+  if (ataque1 > defesa2){
+    dano = ataque1 - defesa2
+    vida_atual = vida2 - dano
+    
+    alert(`O seu adiversario perdeu ${dano} e ficou com ${vida_atual} de vida.`)
+  } else if (ataque1 == defesa2) {
+    alert('O seu adiversario se esquivou do seu golpe.')
+  } else if (ataque1 < defesa2) {
+    Boolean(dano = ataque1 / 2)
+    vida1 = vida1 - dano
+
+    alert('O seu adiversario usou um contra golpe e vc acabou de perder o equivalente a metade do seu dano')
+    alert(`Você perdeu ${dano} de vida, a sua vida atual e ${vida1}`)
+  }
+}
+        </pre>
+      </div>
+    </div>
+
+    <footer class="footer">
+      <p class="footer">© 2024 Desenvolvido por Guilherme Reis.</p>
+      <p class="footer">
+        Acesse o meu<a
+          class="link_git"
+          href="https://github.com/Guilherme-210"
+          target="_blank"
+          ><strong><ion-icon name="logo-github"></ion-icon> GitHub</strong></a
+        >
+      </p>
+    </footer>
 
     <script src="./script.js"></script>
   </body>
