--- a/js/tipos_de_dasos/index.html
+++ b/js/tipos_de_dasos/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
     <link rel="stylesheet" href="style.css" />
     <title>Tipos de dados</title>
   </head>
@@ -12,14 +18,10 @@
     <header>
       <nav>
         <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
-        <a class="nav_pages" href="/js/variaveis/index.html"
-          >variáveis</a
-        >
+        <a class="nav_pages" href="/js/variaveis/index.html">variáveis</a>
       </nav>
       <h1>Tipos de dados</h1>
     </header>
-
-    
 
     <div class="section">
       <h2>Descrição</h2>
@@ -32,20 +34,40 @@
     <div class="section">
       <h2>Tipos Primitivos</h2>
       <ul>
-        <li><strong>Number:</strong> Inclui números inteiros e decimais (floats).</li>
-        <li><strong>BigInt:</strong> Para representar números inteiros muito grandes.</li>
-        <li><strong>String:</strong> Texto delimitado por aspas, pode ser acessado como um array de caracteres.</li>
-        <li><strong>Boolean:</strong> Tipo lógico com dois valores: <em>true</em> ou <em>false</em>.</li>
+        <li>
+          <strong>Number:</strong> Inclui números inteiros e decimais (floats).
+        </li>
+        <li>
+          <strong>BigInt:</strong> Para representar números inteiros muito
+          grandes.
+        </li>
+        <li>
+          <strong>String:</strong> Texto delimitado por aspas, pode ser acessado
+          como um array de caracteres.
+        </li>
+        <li>
+          <strong>Boolean:</strong> Tipo lógico com dois valores:
+          <em>true</em> ou <em>false</em>.
+        </li>
         <li><strong>Null:</strong> Representa um valor nulo, ou "vazio".</li>
-        <li><strong>Undefined:</strong> Valor não definido, para variáveis sem valor atribuído.</li>
+        <li>
+          <strong>Undefined:</strong> Valor não definido, para variáveis sem
+          valor atribuído.
+        </li>
       </ul>
     </div>
 
     <div class="section">
       <h2>Outros Tipos Importantes</h2>
       <ul>
-        <li><strong>Objeto:</strong> Estrutura que agrupa múltiplos valores, como o objeto <em>console</em>.</li>
-        <li><strong>Função:</strong> Blocos de código que realizam tarefas específicas, como o <em>console.error()</em>.</li>
+        <li>
+          <strong>Objeto:</strong> Estrutura que agrupa múltiplos valores, como
+          o objeto <em>console</em>.
+        </li>
+        <li>
+          <strong>Função:</strong> Blocos de código que realizam tarefas
+          específicas, como o <em>console.error()</em>.
+        </li>
       </ul>
     </div>
 
@@ -62,8 +84,16 @@
       </ul>
     </div>
 
-    <footer>
-      <p>Explicação da primeira aula de JavaScript</p>
+    <footer class="footer">
+      <p class="p_footer">© 2024 Desenvolvido por Guilherme Reis.</p>
+      <p class="p_footer">
+        Acesse o meu<a
+          class="link_git"
+          href="https://github.com/Guilherme-210"
+          target="_blank"
+          ><strong><ion-icon name="logo-github"></ion-icon> GitHub</strong></a
+        >
+      </p>
     </footer>
   </body>
 </html>
