--- a/js/comparação_de_dados/index.html
+++ b/js/comparação_de_dados/index.html
@@ -3,17 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
     <link rel="stylesheet" href="style.css" />
     <title>Comparação de dados</title>
   </head>
   <body>
     <header>
       <nav>
-        <a
-          class="nav_pages"
-          href="/js/exercicios/exercicio-2/index.html"
+        <a class="nav_pages" href="/js/exercicios/exercicio-2/index.html"
           >Exercício 2: Calculadora de 4 Operações</a
         >
         <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
@@ -25,42 +29,60 @@
     </header>
 
     <div class="section">
-        <h2>Descrição</h2>
-        <p>Este exercício aborda os operadores de comparação em JavaScript.</p>
-        <h3>Igualdade</h3>
-        <ul>
-            <li><code>==</code> (compara apenas valor)</li>
-            <li><code>===</code> (compara valor e tipo - mais restrito)</li>
-        </ul>
-        <h3>Desigualdade</h3>
-        <ul>
-            <li><code>!=</code> (compara apenas valor)</li>
-            <li><code>!==</code> (compara valor e tipo - mais restrito)</li>
-        </ul>
-        <h3>Relacionais</h3>
-        <ul>
-            <li><code>&gt;</code> maior que</li>
-            <li><code>&gt;=</code> maior ou igual</li>
-            <li><code>&lt;</code> menor que</li>
-            <li><code>&lt;=</code> menor ou igual</li>
-        </ul>
-        <h3>Retorno booleano</h3>
-        <p>As comparações sempre retornam <code>true</code> ou <code>false</code>.</p>
-        <h3>Dica</h3>
-        <p>Utilizar os operadores mais restritos (<code>===</code> e <code>!==</code>) na maioria dos casos para evitar problemas.</p>
+      <h2>Descrição</h2>
+      <p>Este exercício aborda os operadores de comparação em JavaScript.</p>
+      <h3>Igualdade</h3>
+      <ul>
+        <li><code>==</code> (compara apenas valor)</li>
+        <li><code>===</code> (compara valor e tipo - mais restrito)</li>
+      </ul>
+      <h3>Desigualdade</h3>
+      <ul>
+        <li><code>!=</code> (compara apenas valor)</li>
+        <li><code>!==</code> (compara valor e tipo - mais restrito)</li>
+      </ul>
+      <h3>Relacionais</h3>
+      <ul>
+        <li><code>&gt;</code> maior que</li>
+        <li><code>&gt;=</code> maior ou igual</li>
+        <li><code>&lt;</code> menor que</li>
+        <li><code>&lt;=</code> menor ou igual</li>
+      </ul>
+      <h3>Retorno booleano</h3>
+      <p>
+        As comparações sempre retornam <code>true</code> ou <code>false</code>.
+      </p>
+      <h3>Dica</h3>
+      <p>
+        Utilizar os operadores mais restritos (<code>===</code> e
+        <code>!==</code>) na maioria dos casos para evitar problemas.
+      </p>
     </div>
 
     <div class="section">
-        <h2>Exemplos</h2>
-        <div class="code">
-            <pre>
+      <h2>Exemplos</h2>
+      <div class="code">
+        <pre>
 3 == 3 -> true
 4 == "4" -> true  // compara apenas valor
 4 === "4" -> false // compara valor e tipo
 10 > 5 -> true
 10 < 5 -> false
-            </pre>
-        </div>
+            </pre
+        >
+      </div>
     </div>
+
+    <footer class="footer">
+      <p class="footer">© 2024 Desenvolvido por Guilherme Reis.</p>
+      <p class="footer">
+        Acesse o meu<a
+          class="link_git"
+          href="https://github.com/Guilherme-210"
+          target="_blank"
+          ><strong><ion-icon name="logo-github"></ion-icon> GitHub</strong></a
+        >
+      </p>
+    </footer>
   </body>
 </html>
