--- a/js/condicionais/if_else/index.html
+++ b/js/condicionais/if_else/index.html
@@ -3,17 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
     <link rel="stylesheet" href="style.css" />
     <title>Estruturas Condicionais: IF e ELSE</title>
   </head>
   <body>
     <header>
       <nav>
-        <a
-          class="nav_pages"
-          href="/js/operadores_logicos/index.html"
+        <a class="nav_pages" href="/js/operadores_logicos/index.html"
           >Operadores Lógicos</a
         >
         <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
@@ -25,27 +29,33 @@
     </header>
 
     <div class="section">
-        <h2>Descrição</h2>
-        <p>As estruturas condicionais permitem criar blocos de código que serão executados somente quando uma determinada operação lógica for verdadeira.</p>
+      <h2>Descrição</h2>
+      <p>
+        As estruturas condicionais permitem criar blocos de código que serão
+        executados somente quando uma determinada operação lógica for
+        verdadeira.
+      </p>
 
-        <h3>Sintaxe IF</h3>
-        <pre>
+      <h3>Sintaxe IF</h3>
+      <pre>
 if (condicao) {
   // código a ser executado
 }
-        </pre>
+        </pre
+      >
 
-        <h3>Sintaxe IF ELSE</h3>
-        <pre>
+      <h3>Sintaxe IF ELSE</h3>
+      <pre>
 if (condicao) {
   // código se a condição for verdadeira
 } else {
   // código se a condição for falsa
 }
-        </pre>
+        </pre
+      >
 
-        <h3>Sintaxe IF ELSE IF</h3>
-        <pre>
+      <h3>Sintaxe IF ELSE IF</h3>
+      <pre>
 if (condicao1) {
   // código se condicao1 for verdadeira
 } else if (condicao2) {
@@ -53,14 +63,28 @@ if (condicao1) {
 } else {
   // código se todas as condições forem falsas
 }
-        </pre>
+        </pre
+      >
 
-        <h3>Operador Ternário</h3>
-        <p>Forma abreviada e autoavaliada do IF ELSE:</p>
-        <pre>
+      <h3>Operador Ternário</h3>
+      <p>Forma abreviada e autoavaliada do IF ELSE:</p>
+      <pre>
 const resultado = condicao ? resultado_verdadeiro : resultado_falso;
-        </pre>
+        </pre
+      >
     </div>
+
+    <footer class="footer">
+      <p class="footer">© 2024 Desenvolvido por Guilherme Reis.</p>
+      <p class="footer">
+        Acesse o meu<a
+          class="link_git"
+          href="https://github.com/Guilherme-210"
+          target="_blank"
+          ><strong><ion-icon name="logo-github"></ion-icon> GitHub</strong></a
+        >
+      </p>
+    </footer>
 
     <script src="./script.js"></script>
   </body>
