--- a/js/condicionais/switch/index.html
+++ b/js/condicionais/switch/index.html
@@ -3,16 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
     <link rel="stylesheet" href="style.css" />
     <title>Estruturas Condicionais: Switch</title>
   </head>
   <body>
     <header>
       <nav>
-        <a class="nav_pages"
-          href="/js/exercicios/exercicio-4/index.html"
+        <a class="nav_pages" href="/js/exercicios/exercicio-4/index.html"
           >Exercício 4: Calculo de dano</a
         >
         <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
@@ -22,22 +27,37 @@
       </nav>
       <h1>Estruturas Condicionais: Switch</h1>
     </header>
-    
+
     <div class="section">
-        <h2>Descrição</h2>
-        <p>A estrutura condicional <code>switch</code> testa uma expressão/valor contra vários casos possíveis, executando o bloco de código correspondente ao primeiro caso que combina.</p>
-        <p>É útil quando há várias opções possíveis que podem ser testadas, ao invés de usar múltiplas condições com <code>if</code>.</p>
+      <h2>Descrição</h2>
+      <p>
+        A estrutura condicional <code>switch</code> testa uma expressão/valor
+        contra vários casos possíveis, executando o bloco de código
+        correspondente ao primeiro caso que combina.
+      </p>
+      <p>
+        É útil quando há várias opções possíveis que podem ser testadas, ao
+        invés de usar múltiplas condições com <code>if</code>.
+      </p>
 
-        <h3>Vantagens</h3>
-        <ul>
-            <li>Testa múltiplos casos de forma mais simples que vários <code>ifs</code> encadeados.</li>
-            <li>Permite definir um comportamento padrão com o <code>default</code>.</li>
-            <li>Permite interromper a execução de outros casos com o <code>break</code>.</li>
-        </ul>
+      <h3>Vantagens</h3>
+      <ul>
+        <li>
+          Testa múltiplos casos de forma mais simples que vários
+          <code>ifs</code> encadeados.
+        </li>
+        <li>
+          Permite definir um comportamento padrão com o <code>default</code>.
+        </li>
+        <li>
+          Permite interromper a execução de outros casos com o
+          <code>break</code>.
+        </li>
+      </ul>
 
-        <h3>Exemplo de Estrutura Básica</h3>
-        <div class="code">
-            <pre>
+      <h3>Exemplo de Estrutura Básica</h3>
+      <div class="code">
+        <pre>
 switch (expressao) {
   case "valor1":
     // código a ser executado
@@ -48,18 +68,37 @@ switch (expressao) {
   default:
     // código a ser executado se nenhum caso for correspondido
 }
-            </pre>
-        </div>
+            </pre
+        >
+      </div>
 
-        <h3>Funcionamento</h3>
-        <p>A estrutura <code>switch</code>:</p>
-        <ul>
-            <li>Avalia a expressão e testa contra os casos (<code>case</code>).</li>
-            <li>Executa o código do primeiro caso correspondente.</li>
-            <li>Se não houver <code>break</code>, continuará executando os próximos casos.</li>
-            <li>O bloco <code>default</code> é executado quando nenhum caso corresponde à expressão.</li>
-        </ul>
+      <h3>Funcionamento</h3>
+      <p>A estrutura <code>switch</code>:</p>
+      <ul>
+        <li>Avalia a expressão e testa contra os casos (<code>case</code>).</li>
+        <li>Executa o código do primeiro caso correspondente.</li>
+        <li>
+          Se não houver <code>break</code>, continuará executando os próximos
+          casos.
+        </li>
+        <li>
+          O bloco <code>default</code> é executado quando nenhum caso
+          corresponde à expressão.
+        </li>
+      </ul>
     </div>
+
+    <footer class="footer">
+      <p class="footer">© 2024 Desenvolvido por Guilherme Reis.</p>
+      <p class="footer">
+        Acesse o meu<a
+          class="link_git"
+          href="https://github.com/Guilherme-210"
+          target="_blank"
+          ><strong><ion-icon name="logo-github"></ion-icon> GitHub</strong></a
+        >
+      </p>
+    </footer>
 
     <script src="./script.js"></script>
   </body>
