--- a/js/estruturas-de-dados/array/index.html
+++ b/js/estruturas-de-dados/array/index.html
@@ -3,17 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
     <link rel="stylesheet" href="../style.css" />
     <title>Arrays no JavaScript</title>
   </head>
   <body>
     <header>
       <nav>
-        <a
-          class="nav_pages"
-          href="/js/exercicios/exercicio-10/index.html"
+        <a class="nav_pages" href="/js/exercicios/exercicio-10/index.html"
           >Exercício 10: Procurando Palíndromos</a
         >
         <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
@@ -83,6 +87,18 @@ console.log(frutas[3]); // undefined
         <li>Cortar e concatenar arrays.</li>
       </ul>
     </div>
+
+    <footer class="footer">
+      <p class="footer">© 2024 Desenvolvido por Guilherme Reis.</p>
+      <p class="footer">
+        Acesse o meu<a
+          class="link_git"
+          href="https://github.com/Guilherme-210"
+          target="_blank"
+          ><strong><ion-icon name="logo-github"></ion-icon> GitHub</strong></a
+        >
+      </p>
+    </footer>
 
     <script src="script.js"></script>
   </body>
