--- a/js/estruturas_de_repetição/for/index.html
+++ b/js/estruturas_de_repetição/for/index.html
@@ -3,17 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
     <link rel="stylesheet" href="style.css" />
     <title>Estrutura de Repetição FOR</title>
   </head>
   <body>
     <header>
       <nav>
-        <a
-          class="nav_pages"
-          href="/js/exercicios/exercicio-8/index.html"
+        <a class="nav_pages" href="/js/exercicios/exercicio-8/index.html"
           >Exercício 8: Controle financeiro</a
         >
         <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
@@ -25,26 +29,54 @@
     </header>
 
     <div class="section">
-        <h2>Descrição</h2>
-        <p>Este exercício aborda a estrutura de repetição FOR no JavaScript, explicando suas partes e usos comuns.</p>
+      <h2>Descrição</h2>
+      <p>
+        Este exercício aborda a estrutura de repetição FOR no JavaScript,
+        explicando suas partes e usos comuns.
+      </p>
 
-        <h2>Exemplo de Código JavaScript</h2>
-        <div class="code">
-            <pre>
+      <h2>Exemplo de Código JavaScript</h2>
+      <div class="code">
+        <pre>
 for (let i = 0; i <= 10; i++) {
     console.log(i); // Contar de 0 a 10
 }
-            </pre>
-        </div>
+            </pre
+        >
+      </div>
 
-        <h2>Explicação</h2>
-        <p>O código acima usa um loop FOR para contar de 0 a 10 e imprimir cada número no console.</p>
-        <ul>
-            <li><strong>Inicialização:</strong> <code>let i = 0</code> define o início da contagem.</li>
-            <li><strong>Condição:</strong> <code>i <= 10</code> garante que a contagem vá até 10.</li>
-            <li><strong>Finalização:</strong> <code>i++</code> incrementa o índice a cada iteração.</li>
-        </ul>
+      <h2>Explicação</h2>
+      <p>
+        O código acima usa um loop FOR para contar de 0 a 10 e imprimir cada
+        número no console.
+      </p>
+      <ul>
+        <li>
+          <strong>Inicialização:</strong> <code>let i = 0</code> define o início
+          da contagem.
+        </li>
+        <li>
+          <strong>Condição:</strong> <code>i <= 10</code> garante que a contagem
+          vá até 10.
+        </li>
+        <li>
+          <strong>Finalização:</strong> <code>i++</code> incrementa o índice a
+          cada iteração.
+        </li>
+      </ul>
     </div>
+
+    <footer class="footer">
+      <p class="footer">© 2024 Desenvolvido por Guilherme Reis.</p>
+      <p class="footer">
+        Acesse o meu<a
+          class="link_git"
+          href="https://github.com/Guilherme-210"
+          target="_blank"
+          ><strong><ion-icon name="logo-github"></ion-icon> GitHub</strong></a
+        >
+      </p>
+    </footer>
 
     <script src="./script.js"></script>
   </body>
