--- a/js/estruturas_de_repetição/while/index.html
+++ b/js/estruturas_de_repetição/while/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
     <link rel="stylesheet" href="style.css" />
     <title>Estruturas de Repetição: While</title>
   </head>
@@ -15,9 +21,7 @@
           >Exercício 5: Conversor de medidas</a
         >
         <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
-        <a
-          class="nav_pages"
-          href="/js/exercicios/exercicio-6/index.html"
+        <a class="nav_pages" href="/js/exercicios/exercicio-6/index.html"
           >Exercício 6: Visitando novas cidades</a
         >
       </nav>
@@ -25,42 +29,74 @@
     </header>
 
     <div class="section">
-        <h2>O que é?</h2>
-        <p>A estrutura <code>while</code> no JavaScript é uma estrutura de repetição que executa um bloco de código enquanto uma condição específica for verdadeira.</p>
+      <h2>O que é?</h2>
+      <p>
+        A estrutura <code>while</code> no JavaScript é uma estrutura de
+        repetição que executa um bloco de código enquanto uma condição
+        específica for verdadeira.
+      </p>
 
-        <h2>Funcionamento</h2>
-        <p>O laço <code>while</code> é executado repetidamente enquanto a condição for verdadeira. Se a condição nunca se tornar falsa, o loop continuará indefinidamente, causando o que chamamos de "loop infinito".</p>
+      <h2>Funcionamento</h2>
+      <p>
+        O laço <code>while</code> é executado repetidamente enquanto a condição
+        for verdadeira. Se a condição nunca se tornar falsa, o loop continuará
+        indefinidamente, causando o que chamamos de "loop infinito".
+      </p>
 
-        <h2>Sintaxe</h2>
-        <div class="code">
-            <pre>
+      <h2>Sintaxe</h2>
+      <div class="code">
+        <pre>
 while (condição) {
     // código a ser repetido
 }
-            </pre>
-        </div>
+            </pre
+        >
+      </div>
 
-        <h2>Características</h2>
-        <ul>
-            <li>Aceita o uso de <code>break</code> para interromper a repetição.</li>
-            <li>Pode ser combinado com outras estruturas como <code>if</code> e <code>switch</code>.</li>
-        </ul>
+      <h2>Características</h2>
+      <ul>
+        <li>
+          Aceita o uso de <code>break</code> para interromper a repetição.
+        </li>
+        <li>
+          Pode ser combinado com outras estruturas como <code>if</code> e
+          <code>switch</code>.
+        </li>
+      </ul>
 
-        <h2>Utilizações</h2>
-        <p>Usado quando precisamos repetir um trecho de código por tempo indeterminado, em programas que precisam ficar executando até que o usuário decida sair, ou dentro de outras estruturas para criar repetições mais complexas.</p>
+      <h2>Utilizações</h2>
+      <p>
+        Usado quando precisamos repetir um trecho de código por tempo
+        indeterminado, em programas que precisam ficar executando até que o
+        usuário decida sair, ou dentro de outras estruturas para criar
+        repetições mais complexas.
+      </p>
 
-        <h2>Exemplo</h2>
-        <div class="code">
-            <pre>
+      <h2>Exemplo</h2>
+      <div class="code">
+        <pre>
 // Exemplo de loop while
 let contador = 0;
 while (contador &lt; 5) {
     console.log("O contador é: " + contador);
     contador++; // Incrementa o contador para evitar loop infinito
 }
-            </pre>
-        </div>
+            </pre
+        >
+      </div>
     </div>
+
+    <footer class="footer">
+      <p class="footer">© 2024 Desenvolvido por Guilherme Reis.</p>
+      <p class="footer">
+        Acesse o meu<a
+          class="link_git"
+          href="https://github.com/Guilherme-210"
+          target="_blank"
+          ><strong><ion-icon name="logo-github"></ion-icon> GitHub</strong></a
+        >
+      </p>
+    </footer>
 
     <script src="script.js"></script>
   </body>
