--- a/js/exercicios/exercicio-12/index.html
+++ b/js/exercicios/exercicio-12/index.html
@@ -3,17 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
     <link rel="stylesheet" href="style.css" />
     <title>Pilha de Cartas</title>
   </head>
   <body>
     <header>
       <nav>
-        <a
-          class="nav_pages"
-          href="/js/exercicios/exercicio-11/index.html"
+        <a class="nav_pages" href="/js/exercicios/exercicio-11/index.html"
           >Exercício 11: Fila de Espera</a
         >
         <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
@@ -96,6 +100,55 @@ do {
         <li>A opção de sair encerra o programa.</li>
       </ul>
     </div>
+
+    <div class="section">
+      <h2>Resolução</h2>
+      <div class="code">
+        <pre>
+const baralho = []
+let opcao = ""
+
+do {
+  opcao = prompt(
+    `Cartas no baralho: ${baralho.length} 
+    \n1. Adicionar uma carta\n2. Puxar uma carta\n3. Sair`)
+
+  switch (opcao) {
+    case "1":
+      const novaCarta = prompt("Qual é a carta?")
+      baralho.push(novaCarta)
+      break
+    case "2":
+      const cartaPuxada = baralho.pop()
+      if (!cartaPuxada) {
+        alert("Não há nenhuma carta no baralho!")
+      } else {
+        alert(`Você puxou um(a) ${cartaPuxada}`)
+      }
+      break
+    case "3":
+      alert("Saindo...")
+      break
+    default:
+      alert("Opção inválida!")
+  }
+
+} while (opcao !== "3");
+        </pre>
+      </div>
+    </div>
+
+    <footer class="footer">
+      <p class="footer">© 2024 Desenvolvido por Guilherme Reis.</p>
+      <p class="footer">
+        Acesse o meu<a
+          class="link_git"
+          href="https://github.com/Guilherme-210"
+          target="_blank"
+          ><strong><ion-icon name="logo-github"></ion-icon> GitHub</strong></a
+        >
+      </p>
+    </footer>
 
     <script src="script.js"></script>
   </body>
