--- a/js/exercicios/exercicio-14/index.html
+++ b/js/exercicios/exercicio-14/index.html
@@ -23,9 +23,7 @@
         <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
         <a class="nav_pages" href="#">Próxima aula</a>
       </nav>
-      <h1>
-        Exercício 14: Calculadora Geométrica
-      </h1>
+      <h1>Exercício 14: Calculadora Geométrica</h1>
     </header>
 
     <div class="section">
@@ -188,6 +186,18 @@ executar()
         </pre>
       </div>
     </div>
+
+    <footer class="footer">
+      <p class="footer">© 2024 Desenvolvido por Guilherme Reis.</p>
+      <p class="footer">
+        Acesse o meu<a
+          class="link_git"
+          href="https://github.com/Guilherme-210"
+          target="_blank"
+          ><strong><ion-icon name="logo-github"></ion-icon> GitHub</strong>.</a
+        >
+      </p>
+    </footer>
 
     <script src="script.js"></script>
   </body>
