--- a/js/exercicios/exercicio-5/index.html
+++ b/js/exercicios/exercicio-5/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
     <link rel="stylesheet" href="style.css" />
     <title>Conversor de medidas</title>
   </head>
@@ -91,6 +97,62 @@ switch(opcao) {
         >
       </div>
     </div>
+
+    <div class="section">
+      <h2>Resolução</h2>
+      <div class="code">
+        <pre>
+// Entrada de variaveis
+let mm, cm, dm, dam, hm, km;
+const valMetros = prompt('Escreva um valor em metros para ser convertido:');
+const unidade = prompt('Escreva a unidade de medida para converção' +
+  '\nMilímetro(mm), centímetro(cm), decímetro(dm)' +
+  '\nDecâmetro(dam), hectômetro(hm) ou quilômetro (km)').toLowerCase();
+
+// Verificação de converção
+switch (unidade){
+  case 'mm':
+    mm = valMetros * 1000;
+    alert(`Ao se converter ${valMetros} metros. \nÉ obitido ${mm} Milímetro.`);
+    break
+  case 'cm':
+    cm = valMetros * 100;
+    alert(`Ao se converter ${valMetros} metros. \nÉ obitido ${cm} centímetro.`);
+    break
+  case 'dm':
+    dm = valMetros * 10;
+    alert(`Ao se converter ${valMetros} metros. \nÉ obitido ${dm} decímetro.`);
+    break
+  case 'dam':
+    dam = valMetros * 0.1;
+    alert(`Ao se converter ${valMetros} metros. \nÉ obitido ${dam} decâmetro.`);
+    break
+  case 'hm':
+    hm = valMetros * 0.01;
+    alert(`Ao se converter ${valMetros} metros. \nÉ obitido ${hm} hectômetro.`);
+    break
+  case 'km':
+    km = valMetros * 0.001;
+    alert(`Ao se converter ${valMetros} metros. \nÉ obitido ${km} quilômetro.`);
+    break
+  default:
+    alert('opição invalida.');
+}
+        </pre>
+      </div>
+    </div>
+
+    <footer class="footer">
+      <p class="footer">© 2024 Desenvolvido por Guilherme Reis.</p>
+      <p class="footer">
+        Acesse o meu<a
+          class="link_git"
+          href="https://github.com/Guilherme-210"
+          target="_blank"
+          ><strong><ion-icon name="logo-github"></ion-icon> GitHub</strong></a
+        >
+      </p>
+    </footer>
 
     <script src="./script.js"></script>
   </body>
