--- a/js/exercicios/exercicio-6/index.html
+++ b/js/exercicios/exercicio-6/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
     <link rel="stylesheet" href="style.css" />
     <title>Visitando novas cidades</title>
   </head>
@@ -63,6 +69,42 @@ alert(mensagem);
         >
       </div>
     </div>
+
+    <div class="section">
+      <h2>Resolução</h2>
+      <div class="code">
+        <pre>
+const turista = prompt('E aí, turista! Qual é o seu nome?')
+let cidades = ''
+let contagem = 0
+
+let continuar = prompt('Você visitou alguma cidade? (Sim/Não)').toLowerCase();
+
+while (continuar === 'sim' || continuar === 's') {
+  let cidade = prompt('Qual é o nome da cidade visitada?')
+  cidades += ` - ${cidade} \n`
+  contagem++
+  continuar = prompt('Você visitou alguma outra cidade? (Sim/Não)').toLowerCase();
+}
+alert(`Turista: ${turista} 
+  \nQuantidade de cidades visitadas: ${contagem} 
+  \nCidades visitadas: \n ${cidades}`)
+
+        </pre>
+      </div>
+    </div>
+
+    <footer class="footer">
+      <p class="footer">© 2024 Desenvolvido por Guilherme Reis.</p>
+      <p class="footer">
+        Acesse o meu<a
+          class="link_git"
+          href="https://github.com/Guilherme-210"
+          target="_blank"
+          ><strong><ion-icon name="logo-github"></ion-icon> GitHub</strong></a
+        >
+      </p>
+    </footer>
 
     <script src="script.js"></script>
   </body>
