--- a/js/exercicios/exercicio-9/index.html
+++ b/js/exercicios/exercicio-9/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
     <link rel="stylesheet" href="style.css" />
     <title>Robô da Tabuada</title>
   </head>
@@ -15,9 +21,7 @@
           >Estrutura de Repetição FOR</a
         >
         <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
-        <a
-          class="nav_pages"
-          href="/js/exercicios/exercicio-10/index.html"
+        <a class="nav_pages" href="/js/exercicios/exercicio-10/index.html"
           >Exercício 10: Procurando Palíndromos</a
         >
       </nav>
@@ -67,6 +71,41 @@ if (numero >= 1 && numero <= 20) {
         <li>Uma verificação garante que o número esteja entre 1 e 20.</li>
       </ul>
     </div>
+
+    <div class="section">
+      <h2>Resolução</h2>
+      <div class="code">
+        <pre>
+let val = parseFloat(prompt('Insira um valor para ser multiplicado:'))
+let valores = [];
+let resultado = "";
+let separador = " - "; // Defina o separador desejado
+
+for (let i = 0; i <= '20'; i++) {
+  resultado = val * i
+  valores += `${val} * ${i} = ${resultado}\n`
+  // if (i < '20') {
+  //   valores += separador
+  // }
+}
+
+alert(valores);
+
+        </pre>
+      </div>
+    </div>
+
+    <footer class="footer">
+      <p class="footer">© 2024 Desenvolvido por Guilherme Reis.</p>
+      <p class="footer">
+        Acesse o meu<a
+          class="link_git"
+          href="https://github.com/Guilherme-210"
+          target="_blank"
+          ><strong><ion-icon name="logo-github"></ion-icon> GitHub</strong></a
+        >
+      </p>
+    </footer>
 
     <script src="script.js"></script>
   </body>
