--- a/js/funcao/index.html
+++ b/js/funcao/index.html
@@ -17,9 +17,7 @@
   <body>
     <header>
       <nav>
-        <a
-          class="nav_pages"
-          href="/js/exercicios/exercicio-13/index.html"
+        <a class="nav_pages" href="/js/exercicios/exercicio-13/index.html"
           >Exercício 13: Cadastro de imóveis</a
         >
         <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
@@ -89,6 +87,18 @@ nomeDaFuncao();
         <li>Pode ter entradas e saídas (opcionais).</li>
       </ul>
     </div>
+
+    <footer class="footer">
+      <p class="footer">© 2024 Desenvolvido por Guilherme Reis.</p>
+      <p class="footer">
+        Acesse o meu<a
+          class="link_git"
+          href="https://github.com/Guilherme-210"
+          target="_blank"
+          ><strong><ion-icon name="logo-github"></ion-icon> GitHub</strong></a
+        >
+      </p>
+    </footer>
 
     <script src="./script.js"></script>
   </body>
