--- a/js/funcao/parametros_em_Funcoes/index.html
+++ b/js/funcao/parametros_em_Funcoes/index.html
@@ -1,27 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-  <link rel="stylesheet" href="style.css">
-  <title>Parâmetros de uma função</title>
-</head>
-<body> 
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
+    <link rel="stylesheet" href="style.css" />
+    <title>Parâmetros de uma função</title>
+  </head>
+  <body>
     <header>
-        <nav>
-          <a class="nav_pages" href="/js/funcao/index.html">Funções no JavaScript</a>
-          <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
-          <a class="nav_pages" href="/js/funcao/retorno_da_funcao/index.html">Retorno de uma função</a>
-        </nav>
-        <h1>Parâmetros de uma função</h1>
+      <nav>
+        <a class="nav_pages" href="/js/funcao/index.html"
+          >Funções no JavaScript</a
+        >
+        <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
+        <a class="nav_pages" href="/js/funcao/retorno_da_funcao/index.html"
+          >Retorno de uma função</a
+        >
+      </nav>
+      <h1>Parâmetros de uma função</h1>
     </header>
 
     <div class="section">
       <h2>Descrição</h2>
       <p>
-        Este exercício explora os parâmetros em funções JavaScript, mostrando como usá-los, definir valores padrão e como organizar múltiplos parâmetros.
+        Este exercício explora os parâmetros em funções JavaScript, mostrando
+        como usá-los, definir valores padrão e como organizar múltiplos
+        parâmetros.
       </p>
     </div>
 
@@ -95,30 +107,68 @@ parametrosDoJeitoCerto(dadosDoUsuario);
     <div class="section">
       <h2>Explicação</h2>
       <p>
-        Parâmetros em funções permitem passar dados para dentro das funções no momento em que elas são chamadas. Eles podem ter valores padrão e a ordem dos parâmetros é importante, especialmente quando se define vários parâmetros.
+        Parâmetros em funções permitem passar dados para dentro das funções no
+        momento em que elas são chamadas. Eles podem ter valores padrão e a
+        ordem dos parâmetros é importante, especialmente quando se define vários
+        parâmetros.
       </p>
       <ul>
         <li>Funções podem ter um ou mais parâmetros.</li>
-        <li>Parâmetros não informados ficam com o valor <code>undefined</code> por padrão.</li>
+        <li>
+          Parâmetros não informados ficam com o valor <code>undefined</code> por
+          padrão.
+        </li>
         <li>Podemos atribuir valores padrão para parâmetros não informados.</li>
-        <li>Em funções com muitos parâmetros, usar um objeto facilita a organização.</li>
+        <li>
+          Em funções com muitos parâmetros, usar um objeto facilita a
+          organização.
+        </li>
       </ul>
     </div>
 
     <div class="section">
       <h2>Explicação Adicional: Parâmetros de Funções</h2>
-      <p>
-        <strong>Tema central:</strong> Parâmetros de funções
-      </p>
+      <p><strong>Tema central:</strong> Parâmetros de funções</p>
       <ul>
-        <li><strong>O que são parâmetros:</strong> Entradas de uma função, variáveis disponíveis dentro da função, informadas quando a função é chamada.</li>
-        <li><strong>Declarando parâmetros:</strong> São declarados dentro dos parênteses na função. Pode ter quantos parâmetros quiser, separados por vírgula.</li>
-        <li><strong>Chamando a função com parâmetros:</strong> Os valores são passados dentro dos parênteses, na mesma ordem em que foram declarados. A ordem é muito importante!</li>
-        <li><strong>Parâmetros opcionais:</strong> Podem ter valores padrão, e devem ser declarados por último!</li>
-        <li><strong>Dica:</strong> Ao usar muitos parâmetros, transforme-os em um objeto. Isso facilita a chamada da função e torna o código mais legível.</li>
+        <li>
+          <strong>O que são parâmetros:</strong> Entradas de uma função,
+          variáveis disponíveis dentro da função, informadas quando a função é
+          chamada.
+        </li>
+        <li>
+          <strong>Declarando parâmetros:</strong> São declarados dentro dos
+          parênteses na função. Pode ter quantos parâmetros quiser, separados
+          por vírgula.
+        </li>
+        <li>
+          <strong>Chamando a função com parâmetros:</strong> Os valores são
+          passados dentro dos parênteses, na mesma ordem em que foram
+          declarados. A ordem é muito importante!
+        </li>
+        <li>
+          <strong>Parâmetros opcionais:</strong> Podem ter valores padrão, e
+          devem ser declarados por último!
+        </li>
+        <li>
+          <strong>Dica:</strong> Ao usar muitos parâmetros, transforme-os em um
+          objeto. Isso facilita a chamada da função e torna o código mais
+          legível.
+        </li>
       </ul>
     </div>
 
+    <footer class="footer">
+      <p class="footer">© 2024 Desenvolvido por Guilherme Reis.</p>
+      <p class="footer">
+        Acesse o meu<a
+          class="link_git"
+          href="https://github.com/Guilherme-210"
+          target="_blank"
+          ><strong><ion-icon name="logo-github"></ion-icon> GitHub</strong></a
+        >
+      </p>
+    </footer>
+
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
