--- a/js/operadores_e_expressoes/index.html
+++ b/js/operadores_e_expressoes/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
     <link rel="stylesheet" href="style.css" />
     <title>Operadores e expressões</title>
   </head>
@@ -13,22 +19,31 @@
       <nav>
         <a class="nav_pages" href="/js/variaveis/index.html">variáveis</a>
         <a class="nav_pages" href="/"><ion-icon name="home"></ion-icon> Home</a>
-        <a class="nav_pages" href="/js/Usando_js_no_html/index.html">JavaScript no HTML</a>
+        <a class="nav_pages" href="/js/Usando_js_no_html/index.html"
+          >JavaScript no HTML</a
+        >
       </nav>
       <h1>Operadores e expressões</h1>
     </header>
 
-    
-
     <div class="section">
       <h2>Operadores Aritméticos</h2>
       <p>
-        Os operadores aritméticos permitem realizar operações matemáticas simples:
+        Os operadores aritméticos permitem realizar operações matemáticas
+        simples:
       </p>
       <ul>
-        <li>Soma (+), subtração (-), multiplicação (*), divisão (/), resto da divisão (%)</li>
-        <li>Precedência: <code>*</code> e <code>/</code> têm precedência sobre <code>+</code> e <code>-</code></li>
-        <li>Uso de parênteses para agrupamento e controle da ordem de execução</li>
+        <li>
+          Soma (+), subtração (-), multiplicação (*), divisão (/), resto da
+          divisão (%)
+        </li>
+        <li>
+          Precedência: <code>*</code> e <code>/</code> têm precedência sobre
+          <code>+</code> e <code>-</code>
+        </li>
+        <li>
+          Uso de parênteses para agrupamento e controle da ordem de execução
+        </li>
       </ul>
     </div>
 
@@ -37,13 +52,19 @@
       <p>Usados para atribuir valores às variáveis:</p>
       <ul>
         <li>Atribuição simples: <code>=</code></li>
-        <li>Atribuição com operação: <code>+=</code>, <code>-=</code>, <code>*=</code>, <code>/=</code></li>
+        <li>
+          Atribuição com operação: <code>+=</code>, <code>-=</code>,
+          <code>*=</code>, <code>/=</code>
+        </li>
       </ul>
     </div>
 
     <div class="section">
       <h2>Encadeamento</h2>
-      <p>O operador ponto <code>.</code> é utilizado para encadear objetos e funções.</p>
+      <p>
+        O operador ponto <code>.</code> é utilizado para encadear objetos e
+        funções.
+      </p>
     </div>
 
     <div class="section">
@@ -51,24 +72,37 @@
       <ul>
         <li>Incremento: <code>++</code></li>
         <li>Decremento: <code>--</code></li>
-        <li>A posição (antes ou depois da variável) altera o valor retornado pela expressão</li>
+        <li>
+          A posição (antes ou depois da variável) altera o valor retornado pela
+          expressão
+        </li>
       </ul>
     </div>
 
     <div class="section">
       <h2>Expressões</h2>
-      <p>
-        Trechos de código que podem ser avaliados e retornam um resultado:
-      </p>
+      <p>Trechos de código que podem ser avaliados e retornam um resultado:</p>
       <ul>
         <li><code>1 + 1</code></li>
         <li><code>A + 5</code></li>
         <li><code>"Isaac " + "Pontes"</code></li>
       </ul>
       <p>
-        Cuidado com tipos diferentes, já que o JavaScript tem tipagem dinâmica e fraca, podendo ocorrer comportamentos inesperados.
+        Cuidado com tipos diferentes, já que o JavaScript tem tipagem dinâmica e
+        fraca, podendo ocorrer comportamentos inesperados.
       </p>
     </div>
-    
+
+    <footer class="footer">
+      <p class="footer">© 2024 Desenvolvido por Guilherme Reis.</p>
+      <p class="footer">
+        Acesse o meu<a
+          class="link_git"
+          href="https://github.com/Guilherme-210"
+          target="_blank"
+          ><strong><ion-icon name="logo-github"></ion-icon> GitHub</strong></a
+        >
+      </p>
+    </footer>
   </body>
 </html>
