--- a/js/operadores_logicos/index.html
+++ b/js/operadores_logicos/index.html
@@ -3,9 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-  <link rel="stylesheet" href="style.css" />
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
+    <link rel="stylesheet" href="style.css" />
     <title>Operadores Lógicos</title>
   </head>
   <body>
@@ -23,101 +29,121 @@
     </header>
 
     <div class="section">
-        <h2>Descrição</h2>
-        <p>Este exercício aborda os operadores lógicos em JavaScript.</p>
+      <h2>Descrição</h2>
+      <p>Este exercício aborda os operadores lógicos em JavaScript.</p>
 
-        <h3>E (AND)</h3>
-        <p>O operador <code>&&</code> retorna <code>true</code> somente se ambas as partes forem verdadeiras.</p>
-        <table>
-            <tr>
-                <th>p</th>
-                <th>q</th>
-                <th>p && q</th>
-            </tr>
-            <tr>
-                <td>T</td>
-                <td>T</td>
-                <td>T</td>
-            </tr>
-            <tr>
-                <td>T</td>
-                <td>F</td>
-                <td>F</td>
-            </tr>
-            <tr>
-                <td>F</td>
-                <td>T</td>
-                <td>F</td>
-            </tr>
-            <tr>
-                <td>F</td>
-                <td>F</td>
-                <td>F</td>
-            </tr>
-        </table>
-        <h4>Exemplos</h4>
-        <pre>
+      <h3>E (AND)</h3>
+      <p>
+        O operador <code>&&</code> retorna <code>true</code> somente se ambas as
+        partes forem verdadeiras.
+      </p>
+      <table>
+        <tr>
+          <th>p</th>
+          <th>q</th>
+          <th>p && q</th>
+        </tr>
+        <tr>
+          <td>T</td>
+          <td>T</td>
+          <td>T</td>
+        </tr>
+        <tr>
+          <td>T</td>
+          <td>F</td>
+          <td>F</td>
+        </tr>
+        <tr>
+          <td>F</td>
+          <td>T</td>
+          <td>F</td>
+        </tr>
+        <tr>
+          <td>F</td>
+          <td>F</td>
+          <td>F</td>
+        </tr>
+      </table>
+      <h4>Exemplos</h4>
+      <pre>
 true && true === true
 false && true === false
-        </pre>
+        </pre
+      >
 
-        <h3>Ou (OR)</h3>
-        <p>O operador <code>||</code> retorna <code>true</code> se pelo menos uma das partes for verdadeira.</p>
-        <table>
-            <tr>
-                <th>p</th>
-                <th>q</th>
-                <th>p || q</th>
-            </tr>
-            <tr>
-                <td>T</td>
-                <td>T</td>
-                <td>T</td>
-            </tr>
-            <tr>
-                <td>T</td>
-                <td>F</td>
-                <td>T</td>
-            </tr>
-            <tr>
-                <td>F</td>
-                <td>T</td>
-                <td>T</td>
-            </tr>
-            <tr>
-                <td>F</td>
-                <td>F</td>
-                <td>F</td>
-            </tr>
-        </table>
-        <h4>Exemplos</h4>
-        <pre>
+      <h3>Ou (OR)</h3>
+      <p>
+        O operador <code>||</code> retorna <code>true</code> se pelo menos uma
+        das partes for verdadeira.
+      </p>
+      <table>
+        <tr>
+          <th>p</th>
+          <th>q</th>
+          <th>p || q</th>
+        </tr>
+        <tr>
+          <td>T</td>
+          <td>T</td>
+          <td>T</td>
+        </tr>
+        <tr>
+          <td>T</td>
+          <td>F</td>
+          <td>T</td>
+        </tr>
+        <tr>
+          <td>F</td>
+          <td>T</td>
+          <td>T</td>
+        </tr>
+        <tr>
+          <td>F</td>
+          <td>F</td>
+          <td>F</td>
+        </tr>
+      </table>
+      <h4>Exemplos</h4>
+      <pre>
 true || false === true
 false || false === false
-        </pre>
+        </pre
+      >
 
-        <h3>Não (NOT)</h3>
-        <p>O operador <code>!</code> inverte o resultado.</p>
-        <table>
-            <tr>
-                <th>p</th>
-                <th>!p</th>
-            </tr>
-            <tr>
-                <td>T</td>
-                <td>F</td>
-            </tr>
-            <tr>
-                <td>F</td>
-                <td>T</td>
-            </tr>
-        </table>
-        <h4>Exemplos</h4>
-        <pre>
+      <h3>Não (NOT)</h3>
+      <p>O operador <code>!</code> inverte o resultado.</p>
+      <table>
+        <tr>
+          <th>p</th>
+          <th>!p</th>
+        </tr>
+        <tr>
+          <td>T</td>
+          <td>F</td>
+        </tr>
+        <tr>
+          <td>F</td>
+          <td>T</td>
+        </tr>
+      </table>
+      <h4>Exemplos</h4>
+      <pre>
 !true === false
 !false === true
-        </pre>
+        </pre
+      >
     </div>
-    
+
+    <footer class="footer">
+      <p class="footer">© 2024 Desenvolvido por Guilherme Reis.</p>
+      <p class="footer">
+        Acesse o meu<a
+          class="link_git"
+          href="https://github.com/Guilherme-210"
+          target="_blank"
+          ><strong><ion-icon name="logo-github"></ion-icon> GitHub</strong></a
+        >
+      </p>
+    </footer>
   </body>
 </html>
