--- a/js/recursos_nativos/index.html
+++ b/js/recursos_nativos/index.html
@@ -3,8 +3,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
     <link rel="stylesheet" href="style.css" />
     <title>Recursos nativos do navegador</title>
   </head>
@@ -27,7 +33,9 @@
       <h2>Console</h2>
       <ul>
         <li><code>console.log()</code> - mostra mensagens no console.</li>
-        <li><code>console.error()</code> - mostra mensagens de erro no console.</li>
+        <li>
+          <code>console.error()</code> - mostra mensagens de erro no console.
+        </li>
         <li><code>console.warn()</code> - mostra avisos no console.</li>
       </ul>
     </div>
@@ -36,16 +44,36 @@
       <h2>Window</h2>
       <ul>
         <li><code>window.alert()</code> - mostra alertas/popups.</li>
-        <li><code>window.prompt()</code> - permite entrada de dados pelo usuário.</li>
+        <li>
+          <code>window.prompt()</code> - permite entrada de dados pelo usuário.
+        </li>
         <li><code>window.confirm()</code> - confirmação booleana (sim/não).</li>
-        <li>É o objeto global, então seus métodos podem ser chamados sem o <code>window.</code>.</li>
+        <li>
+          É o objeto global, então seus métodos podem ser chamados sem o
+          <code>window.</code>.
+        </li>
       </ul>
     </div>
 
     <div class="section">
       <h2>Document</h2>
-      <p>Representa o documento HTML. Útil para interagir com a página mais tarde.</p>
+      <p>
+        Representa o documento HTML. Útil para interagir com a página mais
+        tarde.
+      </p>
     </div>
+
+    <footer class="footer">
+      <p class="footer">© 2024 Desenvolvido por Guilherme Reis.</p>
+      <p class="footer">
+        Acesse o meu<a
+          class="link_git"
+          href="https://github.com/Guilherme-210"
+          target="_blank"
+          ><strong><ion-icon name="logo-github"></ion-icon> GitHub</strong></a
+        >
+      </p>
+    </footer>
 
     <script src="./script.js"></script>
   </body>
