--- a/js/variaveis/index.html
+++ b/js/variaveis/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
     <link rel="stylesheet" href="style.css" />
     <title>variáveis</title>
   </head>
@@ -38,7 +44,9 @@
 
     <div class="section">
       <h2>Atribuição</h2>
-      <p>O operador <code>=</code> é usado para atribuir um valor a uma variável.</p>
+      <p>
+        O operador <code>=</code> é usado para atribuir um valor a uma variável.
+      </p>
     </div>
 
     <div class="section">
@@ -66,6 +74,17 @@
         <li>Preservar o estado durante a execução.</li>
       </ul>
     </div>
-    
+
+    <footer class="footer">
+      <p class="footer">© 2024 Desenvolvido por Guilherme Reis.</p>
+      <p class="footer">
+        Acesse o meu<a
+          class="link_git"
+          href="https://github.com/Guilherme-210"
+          target="_blank"
+          ><strong><ion-icon name="logo-github"></ion-icon> GitHub</strong></a
+        >
+      </p>
+    </footer>
   </body>
 </html>
